--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-        <h1>FAMILY SURVEY</h1>
+        <h1>MEMBERS SURVEY</h1>
         <h2 style="font-size: 25px; color: rgb(65, 63, 63);">Enter The Details:</h2>
         <div>
             <input type="text" id="details" placeholder="Enter details">
